src/snapshots/bminor__lexer__test__string_literal.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        lexeme: "str",
        line: 0,
    },
    Token {
        kind: Colon,
        lexeme: ":",
        line: 0,
    },
    Token {
        kind: String,
        lexeme: "string",
        line: 0,
    },
    Token {
        kind: Equal,
        lexeme: "=",
        line: 0,
    },
    Token {
        kind: StringLiteral,
        lexeme: "\"true\"",
        line: 0,
    },
    Token {
        kind: Semicolon,
        lexeme: ";",
        line: 0,
    },
    Token {
        kind: EOF,
        lexeme: "",
        line: 0,
    },
]
